signals.log
--- Check performed on Wed Mar 11 15:01:56 +07 2026 ---
/Users/kong_mono/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020
  warnings.warn(
--- DOGEFDUSD Status ---
Current Price: 0.09202
Trend: BEARISH (DOWN)
-----------------------
WAIT: Currently in a Downtrend (Red mode)
-------------------------------------------

--- Check performed on Wed Mar 11 15:06:17 +07 2026 ---
/Users/kong_mono/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020
  warnings.warn(
--- DOGEFDUSD Status ---
Current Price: 0.09203
Trend: BEARISH (DOWN)
-----------------------
WAIT: Currently in a Downtrend (Red mode)
-------------------------------------------

--- Check performed on Wed Mar 11 15:26:34 +07 2026 ---
  File "/Users/kong_mono/trading_signals/trading_signals.py", line 68
    status_msg = f"📊 *{symbol} Daily Update*
                                               ^
SyntaxError: EOL while scanning string literal
-------------------------------------------

--- Check performed on Wed Mar 11 15:26:58 +07 2026 ---
/Users/kong_mono/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020
  warnings.warn(
--- DOGEFDUSD Status ---
Price: 0.09194 | Trend: DOWN
--- BTCFDUSD Status ---
Price: 69596.23 | Trend: UP
-------------------------------------------

--- Check performed on Wed Mar 11 15:30:00 +07 2026 ---
/Users/kong_mono/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020
  warnings.warn(
--- DOGEFDUSD Status ---
Price: 0.09182 | Trend: DOWN
--- BTCFDUSD Status ---
Price: 69538.89 | Trend: UP
-------------------------------------------

